[gd_scene load_steps=11 format=3 uid="uid://byuk1bhvscowb"]

[ext_resource type="FontFile" uid="uid://cutee4paxlogd" path="res://Pieces/Fonts.png" id="1_5gwtd"]
[ext_resource type="Script" uid="uid://qt610ahban13" path="res://Pieces/p_Action_Board/ActionBoard.gd" id="1_mbagx"]
[ext_resource type="Texture2D" uid="uid://cce5qtn30fjhl" path="res://Pieces/p_Action_Board/PanelFocus.png" id="2_mn6pm"]
[ext_resource type="Texture2D" uid="uid://b2c0vpe7y61g3" path="res://Pieces/p_Action_Board/PanelHover.png" id="2_rshyw"]
[ext_resource type="StyleBox" uid="uid://bx4ql6cl65tn7" path="res://Pieces/p_Action_Board/PanelBG.tres" id="2_x6w1m"]
[ext_resource type="FontFile" uid="uid://caashfejeihkd" path="res://Pieces/p_Action_Board/times.ttf" id="6_iy4s5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iy4s5"]
texture = ExtResource("2_mn6pm")
texture_margin_left = 7.0
texture_margin_top = 6.0
texture_margin_right = 7.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mn6pm"]
texture = ExtResource("2_rshyw")
texture_margin_left = 7.0
texture_margin_top = 6.0
texture_margin_right = 7.0
texture_margin_bottom = 6.0

[sub_resource type="Theme" id="Theme_x6w1m"]
default_font = ExtResource("1_5gwtd")
Button/styles/disabled = null
Button/styles/focus = SubResource("StyleBoxTexture_iy4s5")
Button/styles/hover = SubResource("StyleBoxTexture_mn6pm")
Button/styles/normal = ExtResource("2_x6w1m")
Button/styles/pressed = null
Panel/styles/panel = ExtResource("2_x6w1m")
PanelContainer/styles/panel = ExtResource("2_x6w1m")

[sub_resource type="LabelSettings" id="LabelSettings_iy4s5"]
font_size = 32

[node name="ctr2_Action_Board" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_x6w1m")
script = ExtResource("1_mbagx")
is_full_text_visible = true

[node name="clr2_BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0313726, 0.0784314, 0.74902)

[node name="mgc2_Actions" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="vbc2_Actions" type="VBoxContainer" parent="mgc2_Actions"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="lbl2_Action_Title" type="Label" parent="mgc2_Actions/vbc2_Actions"]
layout_mode = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_iy4s5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="plc2_Actions" type="PanelContainer" parent="mgc2_Actions/vbc2_Actions"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="plc2_Full_Text" type="PanelContainer" parent="mgc2_Actions/vbc2_Actions"]
layout_mode = 2
size_flags_vertical = 3

[node name="mgc2_Full_Text" type="MarginContainer" parent="mgc2_Actions/vbc2_Actions/plc2_Full_Text"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="rtl2_Full_Text" type="RichTextLabel" parent="mgc2_Actions/vbc2_Actions/plc2_Full_Text/mgc2_Full_Text"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("6_iy4s5")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="hbc2_Window_Controls" type="HBoxContainer" parent="mgc2_Actions/vbc2_Actions"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="btn2_Confirm" type="Button" parent="mgc2_Actions/vbc2_Actions/hbc2_Window_Controls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Confirm"

[node name="btn2_Full_Text" type="Button" parent="mgc2_Actions/vbc2_Actions/hbc2_Window_Controls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Full Text"

[node name="btn2_Cancel" type="Button" parent="mgc2_Actions/vbc2_Actions/hbc2_Window_Controls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Cancel"
